--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,5 +20,4 @@ jobs:
         run: yarn install
 
       - name: Run linter
-        run: yarn lint
-
+        run: yarn eslint .  # Removed the default `yarn lint` and replaced with `yarn eslint .`
