--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,4 +20,6 @@ jobs:
         run: yarn install
 
       - name: Run linter
+        env: 
+          ESLINT_USE_FLAG_CONFIG: false  
         run: yarn eslint .  # Removed the default `yarn lint` and replaced with `yarn eslint .`
