--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,4 +8,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-        - name: Check out repository code
+      - name: Check out repository code
+        uses: actions/checkout@v3
+  
