--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,3 @@
----
 name: Build and test
 on:
   push:
@@ -10,4 +9,8 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-  
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'  
