--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,3 +14,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'  
+
+      - name: Install dependencies
+        run: yarn install  
+
+      - name: Run linter
+        run: yarn lint  
