make the eslint look for the src file and add flat config env var

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,12 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'  
+          node-version: '20'  # Specify Node.js version 20
 
       - name: Install dependencies
-        run: yarn install  
+        run: yarn install  # Execute yarn install to install dependencies
 
       - name: Run linter
-        run: yarn eslint src  
+        env:
+          ESLINT_USE_FLAT_CONFIG: true  
+        run: yarn eslint src 
