--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Run linter
         env:
           ESLINT_USE_FLAT_CONFIG: true  
-        run: yarn eslint src 
+        run: yarn lint
