--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,5 +20,5 @@ jobs:
 
       - name: Run linter
         env:
-          ESLINT_USE_FLAT_CONFIG: true  
-        run: yarn lint
+          ESLINT_USE_FLAT_CONFIG: false  
+        run: yarn eslint .
