--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,16 @@ jobs:
           node-version: '20'  # Specify Node.js version 20
 
       - name: Install dependencies
-        run: yarn install  # Execute yarn install to install dependencies
+        run: yarn install 
 
       - name: Run linter
         env:
           ESLINT_USE_FLAT_CONFIG: false  
         run: yarn eslint .
+
+      - name: Build Docker image
+            uses: docker/build-push-action@v6
+            with:
+              context: .  
+              tags: zardoabilal/webapp:latest  
+              push: false 
