--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,15 @@ jobs:
           ESLINT_USE_FLAT_CONFIG: false  
         run: yarn eslint .
 
-      - name: Build Docker image
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
-          context: .  
-          tags: zardoabilal/webapp:latest  
-          push: false 
+          context: .
+          tags: zardoabilal/webapp:latest
+          push: true
